--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,8 @@
                 "--save-dir", "myoutdir",
                 "--batch-size", "16",
                 "--lr", "0.001",
-                "--lr-step", "1"
+                "--lr-step", "1",
+                "--w-decay", "0.00001"
             ]
         }
     ]
