--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,8 +43,8 @@
                 "--checkpoint", "myoutdir/My/experiment_21/best_model.pth",
                 // "--root_dir", "img/raw",
                 // "--root_dir", "C:\Users\nando\Pictures\SD Kartenbackups\All_hierarchical\2022\2022-12\2022-12-24"
-                "--root_dir", "img/face",
-                // "--save_demo", "True"
+                "--root_dir", "img/stone",
+                "--save_demo", "True"
             ]
         }
     ]
